--- a/Class02/package.json
+++ b/Class02/package.json
@@ -2,10 +2,14 @@
   "name": "class02",
   "version": "1.0.0",
   "description": "for CRUD operations",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
