--- a/student-portal/package.json
+++ b/student-portal/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "jsonwebtoken": "^9"
+    "jsonwebtoken": "^9",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
