Initialize Class07 project with package.json and dependencies; create empty Class08 index.js and src directory.

--- a/dotorg/package.json
+++ b/dotorg/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch-dev app"
   },
   "keywords": [],
   "author": "Farhan Musharraf",
   "license": "ISC",
   "description": "First project for the institute BTC",
   "dependencies": {
-    "nvm": "^1.0.0"
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
