--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --watch app.js"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "node": "^22.18.0"
-  },
-  "devDependencies": {}
+    "node": "^22.18.0",
+    "routes": "^2.1.0"
+  }
 }
